changes: Confession : remove being global command